Ignore eclipse project files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# eclipse
+.settings/*
+.classpath
+
+# Eclipse Core
+.project
+
+
 # build folders
 com.galenframework.parent/bin/*
 com.galenframework.parent/target/*
@@ -34,3 +42,5 @@ com.galenframework.parent/com.galenframework.web/src-gen/*
 com.galenframework.parent/com.galenframework.web/xtend-gen/*
 com.galenframework.parent/com.galenframework/src-gen/*
 com.galenframework.parent/com.galenframework/xtend-gen/*
+
+com.galenframework.parent/com.galenframework.target/.classpath
