--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,9 @@ before_script:
   - echo $HOME
 
 jdk:
-  - oraclejdk7
+  - oraclejdk8
 
 script:
   - cd com.galenframework.parent
   - mvn clean verify
+  - ./gradlew test
