--- a/com.galenframework.parent/com.galenframework.idea/build.gradle
+++ b/com.galenframework.parent/com.galenframework.idea/build.gradle
@@ -2,6 +2,9 @@
 apply plugin: 'org.xtext.idea-plugin'
 apply plugin: 'org.xtext.idea-repository'
 
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
+
 dependencies {
 	compile project(':com.galenframework')
 	compile project(':com.galenframework.ide')
