--- a/com.galenframework.parent/com.galenframework.ide/.settings/org.eclipse.jdt.core.prefs
+++ b/com.galenframework.parent/com.galenframework.ide/.settings/org.eclipse.jdt.core.prefs
@@ -1,7 +1,9 @@
+#
+#Wed Oct 21 17:59:02 CEST 2015
+org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.8
-org.eclipse.jdt.core.compiler.compliance=1.8
+org.eclipse.jdt.core.compiler.source=1.6
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
-org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-org.eclipse.jdt.core.compiler.source=1.8
+org.eclipse.jdt.core.compiler.compliance=1.6
