--- a/com.galenframework.parent/com.galenframework.web/.classpath
+++ b/com.galenframework.parent/com.galenframework.web/.classpath
@@ -8,8 +8,8 @@
   <classpathentry kind="var" path="M2_REPO/javax/servlet/javax.servlet-api/3.1.0/javax.servlet-api-3.1.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/javax/annotation/javax.annotation-api/1.2/javax.annotation-api-1.2.jar" sourcepath="M2_REPO/javax/annotation/javax.annotation-api/1.2/javax.annotation-api-1.2-sources.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/com/galenframework/com.galenframework/1.0.0-SNAPSHOT/com.galenframework-1.0.0-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/galenframework/com.galenframework.ide/1.0.0-SNAPSHOT/com.galenframework.ide-1.0.0-SNAPSHOT.jar"/>
+  <classpathentry kind="src" path="/com.galenframework"/>
+  <classpathentry kind="src" path="/com.galenframework.ide"/>
   <classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext.xbase.web/2.9.0.beta5/org.eclipse.xtext.xbase.web-2.9.0.beta5.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/eclipse/xtext/org.eclipse.xtext.web/2.9.0.beta5/org.eclipse.xtext.web-2.9.0.beta5.jar"/>
   <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar" sourcepath="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17-sources.jar"/>
