--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,14 @@
 
 # IDEA files
 .idea
+*.iml
+*.ipr
+*.iws
 
 # build folders
 com.galenframework.parent/bin/*
 com.galenframework.parent/target/*
+com.galenframework.parent/.gradle/*
 com.galenframework.parent/com.galenframework/build/*
 com.galenframework.parent/com.galenframework.ide/bin/*
 com.galenframework.parent/com.galenframework.ide/build/
@@ -30,7 +34,7 @@ com.galenframework.parent/com.galenframework/bin/*
 com.galenframework.parent/com.galenframework/target/*
 samples/.metadata/*
 com.galenframework.parent/com.galenframework.target/.classpath
-com.galenframework.parent/.gradle/*
+com.galenframework.parent/com.galenframework.target/bin/*
 
 # Gen folders
 com.galenframework.parent/com.galenframework/model/generated/*
@@ -48,4 +52,5 @@ com.galenframework.parent/com.galenframework.web/src-gen/*
 com.galenframework.parent/com.galenframework.web/xtend-gen/*
 com.galenframework.parent/com.galenframework/src-gen/*
 com.galenframework.parent/com.galenframework/xtend-gen/*
+
 
