--- a/com.galenframework.parent/pom.xml
+++ b/com.galenframework.parent/pom.xml
@@ -9,6 +9,8 @@
 	<properties>
 		<tycho-version>0.23.1</tycho-version>
 		<xtextVersion>2.9.0.beta5</xtextVersion>
+        	<galen.version>2.1.2</galen.version>
+        	<selenium.version>2.48.2</selenium.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.6</maven.compiler.source>
 		<maven.compiler.target>1.6</maven.compiler.target>
