--- a/com.galenframework.parent/pom.xml
+++ b/com.galenframework.parent/pom.xml
@@ -7,6 +7,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
+		<os-jvm-flags /> <!-- for the default case -->
 		<tycho-version>0.23.1</tycho-version>
 		<xtextVersion>2.9.0.beta5</xtextVersion>
 		<galen.version>2.1.2</galen.version>
