--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: java
 
 sudo: false
 
-
 before_script:
   - export MAVEN_SKIP_RC=true
   - export MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=512m"
   - "export PATH=`pwd`/bin:$PATH"
   - echo $HOME
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 
 jdk:
   - oraclejdk8
