--- a/com.galenframework.parent/com.galenframework.ide/.project
+++ b/com.galenframework.parent/com.galenframework.ide/.project
@@ -33,12 +33,21 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1445442315238</id>
+			<id>1448911143797</id>
 			<name></name>
 			<type>10</type>
 			<matcher>
 				<id>org.eclipse.ui.ide.multiFilter</id>
 				<arguments>1.0-name-matches-false-false-target</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1448911143798</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-build</arguments>
 			</matcher>
 		</filter>
 	</filteredResources>
