--- a/com.galenframework.parent/com.galenframework.tests/pom.xml
+++ b/com.galenframework.parent/com.galenframework.tests/pom.xml
@@ -10,6 +10,11 @@
 	<packaging>eclipse-test-plugin</packaging>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>resources</directory>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.xtend</groupId>
