adds specs.feature and specs.update to parent pom.xml

--- a/com.galenframework.specs.parent/pom.xml
+++ b/com.galenframework.specs.parent/pom.xml
@@ -21,6 +21,8 @@
 		<module>com.galenframework.specs.target</module>
 		<module>com.galenframework.specs.tests</module>
 		<module>com.galenframework.specs.ui.tests</module>
+		<module>com.galenframework.specs.update</module>
+		<module>com.galenframework.specs.feature</module>
 	</modules>
 	<build>
 		<plugins>
