Update web context
see #10

--- a/com.galenframework.specs.parent/com.galenframework.specs.web/pom.xml
+++ b/com.galenframework.specs.parent/com.galenframework.specs.web/pom.xml
@@ -29,6 +29,9 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
+					<webApp>
+		     			<contextPath>/galen_ide</contextPath>
+					</webApp>
 					<warSourceDirectory>WebRoot</warSourceDirectory>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
