Introducing release publish for IDEA plugin
see #11

--- a/com.galenframework.specs.parent/com.galenframework.specs.idea/publish.gradle
+++ b/com.galenframework.specs.parent/com.galenframework.specs.idea/publish.gradle
@@ -20,6 +20,6 @@ intellij {
     username publishUsername
     password publishPassword
     pluginId '8302'
-    channel 'nightly'
+    channel !release?'beta':''
   } 
 }
