fix(idea): Update plugin.xml
fix #15. Enforce IDEA dependency

--- a/com.galenframework.specs.parent/com.galenframework.specs.idea/resources/plugin.xml
+++ b/com.galenframework.specs.parent/com.galenframework.specs.idea/resources/plugin.xml
@@ -9,6 +9,7 @@
 
 	<idea-version since-build="131"/>
 	<depends>org.eclipse.xtext.idea</depends>
+  	<depends>com.intellij.modules.java</depends>
 	
 	 <application-components>
         <component>
