chore(build): Clean up build

--- a/com.galenframework.specs.parent/build.gradle
+++ b/com.galenframework.specs.parent/build.gradle
@@ -9,7 +9,8 @@ buildscript {
 }
 
 subprojects {
-	ext.xtextVersion = '2.10.0'
+	ext.mwe2Version = '2.8.3'
+	ext.xtextVersion = '2.11.0'
 	repositories {
 		jcenter()
 	}
