--- a/com.galenframework.specs.parent/pom.xml
+++ b/com.galenframework.specs.parent/pom.xml
@@ -8,6 +8,7 @@
 
 	<properties>
 		<tycho-version>0.23.1</tycho-version>
+		<mwe2Version>2.8.3</mwe2Version>
 		<xtextVersion>2.10.0</xtextVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
