--- a/com.galenframework.specs.parent/build.gradle
+++ b/com.galenframework.specs.parent/build.gradle
@@ -3,14 +3,15 @@ buildscript {
 		jcenter()
 	}
 	dependencies {
-		classpath 'org.xtext:xtext-gradle-plugin:1.0.14'
-		classpath 'org.xtext:xtext-idea-gradle-plugin:1.0.14'
+		classpath 'org.xtext:xtext-gradle-plugin:1.0.17'
+		classpath 'org.xtext:xtext-idea-gradle-plugin:1.0.17'
 	}
 }
 
 subprojects {
 	ext.mwe2Version = '2.8.3'
 	ext.xtextVersion = '2.10.0'
+	ext.gradleVersion = '3.4.1'
 	repositories {
 		jcenter()
 	}
@@ -31,4 +32,8 @@ subprojects {
 	configurations.all {
 		exclude group: 'asm'
 	}
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = "${gradleVersion}"
 }
