--- a/com.galenframework.specs.parent/com.galenframework.specs.idea/build.gradle
+++ b/com.galenframework.specs.parent/com.galenframework.specs.idea/build.gradle
@@ -18,7 +18,7 @@ ideaDevelopment {
 }
 
 task wrapper(type: Wrapper) {
-   gradleVersion = '2.8'
+    gradleVersion = "${gradleVersion}"
 }
 
 task unzipRepository(type: Copy, dependsOn: 'ideaRepository') {
