--- a/com.galenframework.specs.parent/gradle/wrapper/gradle-wrapper.properties
+++ b/com.galenframework.specs.parent/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Apr 13 16:39:11 CEST 2016
+#Mon Mar 06 07:11:54 CET 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.11-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.0-bin.zip
