--- a/com.galenframework.specs.parent/com.galenframework.specs.idea/META-INF/plugin.xml
+++ b/com.galenframework.specs.parent/com.galenframework.specs.idea/META-INF/plugin.xml
@@ -4,10 +4,10 @@
 	<description>
       This plugin enables smart editing of Galen Specs Language files.
 	</description>
-	<version>0.1.0</version>
+	<version>0.2.0</version>
 	<vendor>Martin Reinhardt</vendor>
 
-	<idea-version since-build="141.0" until-build="145.99999"/>
+	<idea-version since-build="163" until-build="171.*"/>
 	<depends>org.eclipse.xtext.idea</depends>
 
 	<xi:include href="plugin_gen.xml" xpointer="xpointer(/idea-plugin/*)"/>
