fix(idea): Correct IDEA canary upload

--- a/com.galenframework.specs.parent/com.galenframework.specs.idea/publish.gradle
+++ b/com.galenframework.specs.parent/com.galenframework.specs.idea/publish.gradle
@@ -16,6 +16,6 @@ intellij {
     username publishUsername
     password publishPassword
     pluginId '8302'
-    channel !release?'beta':''
+    channel release.toBoolean()?'':'canary'
   }
 }
